<resources>
    <string name="app_name">TwitterCounterTask</string>
    <string name="twitter_character_count">Twitter character count</string>
    <string name="characters_typed">Characters Typed</string>
    <string name="characters_remaining">Characters Remaining</string>
    <string name="start_typing_you_can_enter_up_to_280_characters">Start typing! You can enter up to 280 characters</string>
    <string name="copy_text">Copy Text</string>
    <string name="clear_text">Clear Text</string>
    <string name="post_tweet">Post tweet</string>
    <string name="tweet_can_t_be_empty">Tweet can\'t be empty</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="tweet_has_been_sent">Tweet has been sent</string>
</resources>